// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="ais-Hits MyCustomHits"
>
  <ul
    className="ais-Hits-list"
  >
    <li
      className="ais-Hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="ais-Hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="ais-Hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;

exports[`Hits accepts a hitComponent prop 1`] = `
<div
  className="ais-Hits"
>
  <ul
    className="ais-Hits-list"
  >
    <li
      className="ais-Hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="ais-Hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="ais-Hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;
